// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTALinkOrButton > renders back chevron when withBackChevron is true 1`] = `
<span
  class="cta-button__chevron mr-3"
>
  <svg
    class="cta-button__chevron-icon size-2"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 320 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"
    />
  </svg>
</span>
`;

exports[`CTALinkOrButton > renders chevron when withChevron is true 1`] = `
<span
  class="cta-button__chevron ml-3"
>
  <svg
    class="cta-button__chevron-icon size-2"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 320 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
    />
  </svg>
</span>
`;

exports[`CTALinkOrButton > renders with primary variant by default as a button 1`] = `
<button
  class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark"
  type="button"
>
  Click me
</button>
`;
